--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,11 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Taxes\TaxCalculator:
+        arguments:
+            $tva: 20
+
+    Cocur\Slugify\Slugify: ~
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
