--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,11 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes:
+        - bootstrap_5_layout.html.twig
+
+    globals:
+        categoryRepository: "@App\\Repository\\CategoryRepository"
+        productRepository: "@App\\Repository\\ProductRepository"
 
 when@test:
     twig:
