--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,5 +26,14 @@ services:
 
     Cocur\Slugify\Slugify: ~
 
+    App\Doctrine\EntityListener\CategorySlugListener:
+        tags: [
+            {
+                name: "doctrine.orm.entity_listener",
+                event: prePersist,
+                entity: App\Entity\Category
+            }
+        ]
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
