--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes:
-        - bootstrap_5_horizontal_layout.html.twig
+        - bootstrap_5_layout.html.twig
 
     globals:
         categoryRepository: "@App\\Repository\\CategoryRepository"
