--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,5 +26,41 @@ services:
 
     Cocur\Slugify\Slugify: ~
 
+    App\EntityListener\CategoryListener\CategorySlugListener:
+        tags: [
+            {
+                name: "doctrine.orm.entity_listener",
+                event: prePersist,
+                entity: App\Entity\Category
+            }
+        ]
+
+    App\EntityListener\CategoryListener\CategoryDateListener:
+      tags: [
+          {
+              name: "doctrine.orm.entity_listener",
+              event: prePersist,
+              entity: App\Entity\Category
+          }
+      ]
+
+    App\EntityListener\ProductListener\ProductSlugListener:
+        tags: [
+            {
+                name: "doctrine.orm.entity_listener",
+                event: prePersist,
+                entity: App\Entity\Product
+            }
+        ]
+
+    App\EntityListener\ProductListener\ProductDateListener:
+        tags: [
+            {
+                name: "doctrine.orm.entity_listener",
+                event: prePersist,
+                entity: App\Entity\Product
+            }
+        ]
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
