--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,13 +36,8 @@ services:
         ]
 
     App\EntityListener\CategoryListener\CategoryDateListener:
-      tags: [
-          {
-              name: "doctrine.orm.entity_listener",
-              event: prePersist,
-              entity: App\Entity\Category
-          }
-      ]
+      tags:
+        - { name: "doctrine.orm.entity_listener", event: prePersist, entity: App\Entity\Category }
 
     App\EntityListener\ProductListener\ProductSlugListener:
         tags: [
@@ -54,13 +49,9 @@ services:
         ]
 
     App\EntityListener\ProductListener\ProductDateListener:
-        tags: [
-            {
-                name: "doctrine.orm.entity_listener",
-                event: prePersist,
-                entity: App\Entity\Product
-            }
-        ]
+        tags:
+          - { name: "doctrine.orm.entity_listener", event: prePersist, entity: App\Entity\Product }
+          - { name: "doctrine.orm.entity_listener", event: preUpdate, entity: App\Entity\Product }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
