create aliases @template for front templates

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,8 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes:
         - bootstrap_5_layout.html.twig
+    paths:
+        '%kernel.project_dir%/templates/front': 'template'
 
     globals:
         categoryRepository: "@App\\Repository\\CategoryRepository"
