--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,14 +5,19 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        # Le provider indique au composant security de symfo où se trouvent les données des utilisateurs
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider # Dans cette région là, 'main'
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
